// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-YLmAF iIGhgO"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-feyilL fuFEGm"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-cZihYk EvjXd"
    >
      <div
        className="sc-cNxsl OROYp"
      />
    </span>
    <span
      className="sc-iaSSRK ciIjGY"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-YLmAF iIGhgO"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-feyilL fuFEGm"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-cZihYk EvjXd"
    >
      <div
        className="sc-cNxsl OROYp"
      />
    </span>
    <span
      className="sc-iaSSRK ciIjGY"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-YLmAF iIGhgO"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-feyilL fuFEGm"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-cZihYk EvjXd"
    >
      <div
        className="sc-cNxsl OROYp"
      />
    </span>
    <span
      className="sc-iaSSRK ciIjGY"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-YLmAF iIGhgO"
>
  <input
    checked={true}
    className="sc-feyilL fuFEGm"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-cZihYk EvjXd"
  >
    <div
      className="sc-cNxsl OROYp"
    />
  </span>
  <span
    className="sc-iaSSRK ciIjGY"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-YLmAF iIGhgO"
>
  <input
    className="sc-feyilL fuFEGm"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-cZihYk EvjXd"
  >
    <div
      className="sc-cNxsl OROYp"
    />
  </span>
  <span
    className="sc-iaSSRK ciIjGY"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-YLmAF iIGhgO"
      htmlFor="button1"
    >
      <input
        className="sc-feyilL fuFEGm"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-cZihYk EvjXd"
      >
        <div
          className="sc-cNxsl OROYp"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-YLmAF iIGhgO"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-feyilL fuFEGm"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-cZihYk EvjXd"
      >
        <div
          className="sc-cNxsl OROYp"
        />
      </span>
      <span
        className="sc-iaSSRK ciIjGY"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-YLmAF iIGhgO"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-feyilL fuFEGm"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-cZihYk EvjXd"
      >
        <div
          className="sc-cNxsl OROYp"
        />
      </span>
      <span
        className="sc-iaSSRK ciIjGY"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-YLmAF iIGhgO"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-feyilL fuFEGm"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-cZihYk EvjXd"
      >
        <div
          className="sc-cNxsl OROYp"
        />
      </span>
      <span
        className="sc-iaSSRK ciIjGY"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
